--- a/RemEngine/RemEngine.vcxproj
+++ b/RemEngine/RemEngine.vcxproj
@@ -71,12 +71,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\Connor\source\repos\RemEngine\ExternalLibs\assimp\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glfw-3.3.7.bin.WIN64\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glad\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glm-0.9.9.8\glm;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Connor\source\repos\RemEngine\ExternalLibs\stb_image;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\assimp\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glfw-3.3.7.bin.WIN64\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glad\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glm-0.9.9.8\glm;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\Connor\source\repos\RemEngine\ExternalLibs\assimp\lib\Release;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glfw-3.3.7.bin.WIN64\lib-vc2022;$(LibraryPath)</LibraryPath>
     <ExecutablePath>C:\Users\Connor\source\repos\RemEngine\ExternalLibs\assimp\bin\Release;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glfw-3.3.7.bin.WIN64\lib-vc2022;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Users\Connor\source\repos\RemEngine\ExternalLibs\assimp\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glfw-3.3.7.bin.WIN64\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glad\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glm-0.9.9.8\glm;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Connor\source\repos\RemEngine\ExternalLibs\stb_image;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\assimp\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glfw-3.3.7.bin.WIN64\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glad\include;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glm-0.9.9.8\glm;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\Connor\source\repos\RemEngine\ExternalLibs\assimp\lib\Release;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glfw-3.3.7.bin.WIN64\lib-vc2022;$(LibraryPath)</LibraryPath>
     <ExecutablePath>C:\Users\Connor\source\repos\RemEngine\ExternalLibs\assimp\bin\Release;C:\Users\Connor\source\repos\RemEngine\ExternalLibs\glfw-3.3.7.bin.WIN64\lib-vc2022;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
@@ -153,7 +153,6 @@
     <ClInclude Include="gameObject.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="shader.h" />
-    <ClInclude Include="stb_image.h" />
     <ClInclude Include="textureAtlas.h" />
     <ClInclude Include="transform.h" />
     <ClInclude Include="world.h" />
