Added instancing for blocks

--- a/RemEngine/RemEngine.vcxproj
+++ b/RemEngine/RemEngine.vcxproj
@@ -140,8 +140,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\ExternalLibs\glad\src\glad.c" />
+    <ClCompile Include="block.cpp" />
     <ClCompile Include="gameInstance.cpp" />
-    <ClCompile Include="gameObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="shader.cpp" />
@@ -150,8 +150,8 @@
     <ClCompile Include="transform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="block.h" />
     <ClInclude Include="gameInstance.h" />
-    <ClInclude Include="gameObject.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="spectator.h" />
